757: set intersection size at least two in rust

--- a/.gitignore
+++ b/.gitignore
@@ -389,3 +389,8 @@ tags
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,vim,rust,linux,python,pycharm,visualstudiocode
+
+
+# Added by cargo
+
+/target
